--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.servlet.context-path=/spring-security-jwt
-#DB is already created in mysql with command : create databse spring_jwt
+#DB is already created in mysql with command : create databse spring-security-jwt
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_jwt
 spring.datasource.username=root
 spring.datasource.password=root
